# testdata-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py
src/: ai_providers.py  config.py  generator.py
testdata_ai/: __init__.py  __main__.py  ai_providers.py  cli.py  config.py  contexts.py  generator.py  prompts.py
tests/: conftest.py  test_ai_providers.py  test_cli.py  test_config.py  test_contexts.py  test_generator.py  test_package.py  test_prompts.py
