[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testdata-ai"
version = "0.1.0"
description = "AI-powered test data generator for QA engineers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TestCraft AI", email = "testcraft.ai@protonmail.com"}
]
keywords = ["testing", "test-data", "ai", "qa", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.10.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["openai>=1.10.0", "anthropic>=0.18.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/testcraft-ai/testdata-ai"
Documentation = "https://github.com/testcraft-ai/testdata-ai/blob/main/README.md"
Repository = "https://github.com/testcraft-ai/testdata-ai"
"Bug Tracker" = "https://github.com/testcraft-ai/testdata-ai/issues"

[project.scripts]
testdata-ai = "testdata_ai.cli:cli"

[tool.setuptools]
packages = ["testdata_ai"]

[tool.setuptools.package-data]
testdata_ai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]